plugin/src/test/resources/annotator/perl/issue1884.code
foreach<error descr="<expression>, <foreach iterator> or Perl5: ( expected, got '{'">{</error>

}